# xarray_jax

./: CONTRIBUTING.md  README.md  pyproject.toml
xarray_jax/: __init__.py  core.py  jax_transforms.py  pytree.py
xarray_jax/tests/: jax_transforms_test.py  pytree_test.py  xarray_jax_test.py
