[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xarray-jax"
version = "0.0.1"
description = "JAX-powered Xarray"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  { name="DeepMind", email="noreply@google.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jax",
    "xarray",
    "numpy",
    "absl-py",
    "chex",
]

[project.urls]
"Homepage" = "https://github.com/google-deepmind/xarray_jax"

[tool.setuptools.packages.find]
where = ["."]
include = ["xarray_jax*"]